changed header, footer, links

--- a/live/index.html
+++ b/live/index.html
@@ -50,12 +50,12 @@
             <div class="u-header__section">
                 <div class="header_container">
                     <h1 class="logo">
-                        <a href="/en" title="VinSmart" class="vs-logo-link">
-                                <img src="/images/logo.png" alt="VSmart" class="vs-logo dark active">
+                        <a href="/" title="VinSmart" class="vs-logo-link">
+                                <img src="/images/logo-b.png" alt="VSmart" class="vs-logo dark active">
                             <img src="/images/logo.png" alt="VSmart" class="vs-logo light">
                         </a>
                     </h1>
-                    <nav class="menu_primary xd-nav sl-change dark">
+                    <nav class="menu_primary xd-nav sl-change light">
 
                         <!--
                         <div class="fs-search-top">
@@ -67,16 +67,13 @@
                                 <a class="product-toggle" href="javascript:void(0);">Smartphone</a>
                             </li>
                             <li>
-                                <a class="product-toggle-tivi" href="javascript:void(0);">TV</a>
-                            </li>
-                            <li>
-                                <a href="/en/about-us">About Us</a>
+                                <a href="/about-us">About Us</a>
                             </li>
                             <li>
                                 <a href="https://support.vsmart.net/vn-en/">Support</a>
                             </li>
                             <li>
-                                <select id="setLanguage" class="selectedLangLight changeLang" data-open-icon="fa fa-angle-down" data-close-icon="fa fa-angle-up">
+                                <select id="setLanguage" class="selectLangDark changeLang" data-open-icon="fa fa-angle-down" data-close-icon="fa fa-angle-up">
                                         <option value="en" selected>Global / English</option>
 
                                         <option value="vi">Vietnam / Tiếng Việt</option>
@@ -106,31 +103,7 @@
             <li>
                 <ul class="fs-spr-4">
                     <li>
-                        <a href="/en/live-4/">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/live-4.png" alt="Live">
-                            </div>
-                            <span>Live 4</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/star-4/">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/star4-min.png" alt="star 4">
-                            </div>
-                            <span>Star 4</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/active-3">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-active3.png" alt="Active 3">
-                            </div>
-                            <span>Active 3</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/joy-3">
+                        <a href="/joy-3">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="/images/menu/img-joy3.png" alt="Joy 3">
                             </div>
@@ -138,23 +111,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/en/star-3">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-star3.png" alt="Star 3">
-                            </div>
-                            <span>Star 3</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/bee-3">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-bee3.png" alt="Bee 3">
-                            </div>
-                            <span>Bee 3</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/live">
+                        <a href="/live">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="/images/menu/img-live.png" alt="Live">
                             </div>
@@ -162,7 +119,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/en/joy-2-plus">
+                        <a href="/joy-2-plus">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="/images/menu/img-joy2-plus.png" alt="Joy 2+">
                             </div>
@@ -170,7 +127,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/en/star">
+                        <a href="/star">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="/images/menu/img-star.png" alt="Star">
                             </div>
@@ -178,7 +135,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/en/bee">
+                        <a href="/bee">
                             <div class="fs-menu-pic">
 
                                 <img class="cmPic"
@@ -193,91 +150,13 @@
     </div>
 </div>
 
-
-
-<div id="tiviMenu" class="fs-menu-products" style="display: none;">
-    <div class="fs-menu-products-box">
-        <button class="menu_products_close" type="button"></button>
-        <ul class="fs-has-layout">
-            <li>
-                <h2>4K TV</h2>
-            </li>
-            <li>
-                <ul class="fs-spr-3">
-                    <li>
-                        <a href="/en/tv-55ke8500">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic"
-                                     src="/images/menu/img-55-8500.png"
-                                     alt="55KE8500">
-                            </div>
-                            <span>55KE8500</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/tv-49ke8100">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-49-8100.png" alt="49KE8100">
-                            </div>
-                            <span>49KE8100</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/tv-55kd6800">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-55-6800.png" alt="55KD6800">
-                            </div>
-                            <span>55KD6800</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/tv-50kd6800">
-                            <div class="fs-menu-pic">
-
-                                <img class="cmPic"
-                                     src="/images/menu/img-50-6800.png" alt="50KD6800">
-                            </div>
-                            <span>50KD6800</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/en/tv-43kd6600">
-                            <div class="fs-menu-pic">
-                                <img class="cmPic"
-                                     src="/images/menu/img-43-6600.png" alt="43KD6600">
-                            </div>
-                            <span>43KD6600</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-</div>
-
                 <!-- END MENU -->
 
             </div>
 
             
-    <div class="navigation">
-        <div class="s-logo">LIVE</div>
-        <ul class="main-nav">
-            <li data-target="#thong-tin" class="xd-nav">Overview</li>
-            <li data-target="#thong-so" class="xd-nav">Tech specs</li>
-            <!--li class="hot-icon"><a href="#hot"><img src="/images/live/hot-icon.png" /></a></li-->
-            <li class="lang"><a href="/vi/live/">VI</a><a href="javscript:void(0)" class="active">EN</a></li>
-        </ul>
-    </div>
-
 
         </header>
-
-
-        
-
-
-
 
 
 <section id="kv" class="xd-section sec1">
@@ -607,79 +486,54 @@
         <input type="hidden" id="_currentLanguage" value="en" />
 
         <section id="footnote" class="">
-    <div class="fn-group">
-        <div class="fn-list">
-            <div class="h2">SMARTPHONES</div>
-            <div class="fn-txt">
-                <a href="/en/star-4/" class="fn-link">Star 4</a>
-                <a href="/en/active-3/" class="fn-link">Active 3</a>
-                <a href="/en/joy-3/" class="fn-link">Joy 3</a>
-                <a href="/en/star-3/" class="fn-link">Star 3</a>
-                <a href="/en/bee-3/" class="fn-link">Bee 3</a>
-                <a href="/en/live/" class="fn-link">Live</a>
-                <a href="/en/joy-2-plus/" class="fn-link">Joy 2+</a>
-                <a href="/en/star/" class="fn-link">Star</a>
-                <a href="/en/bee/" class="fn-link">Bee</a>
+            <div class="fn-group">
+                <div class="fn-list">
+                    <div class="h2">СМАРТФОНЫ</div>
+                    <div class="fn-txt">
+                        <a href="/joy-3/" class="fn-link">Joy 3</a>
+                        <a href="/live/" class="fn-link">Live</a>
+                        <a href="/joy-2-plus/" class="fn-link">Joy 2+</a>
+                        <a href="/star/" class="fn-link">Star</a>
+                        <a href="/bee/" class="fn-link">Bee</a>
+                    </div>
+                </div>
+                <div class="fn-list">
+                    <div class="h2">КОНТАКТЫ</div>
+                    <div class="fn-txt">
+                        <a href="/contact" class="fn-link" target="_blank">Связаться с нами</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="fn-list">
-            <div class="h2">TV</div>
-            <div class="fn-txt">
-                <a href="/en/tv-55ke8500" class="fn-link">55KE8500</a>
-                <a href="/en/tv-49ke8100" class="fn-link">49KE8100</a>
-                <a href="/en/tv-55kd6800" class="fn-link">55KD6800</a>
-                <a href="/en/tv-50kd6800" class="fn-link">50KD6800</a>
-                <a href="/en/tv-43kd6600" class="fn-link">43KD6600</a>
+            <div class="fn-group">
+                <div class="fn-list">
+                    <div class="h2">Vsmart</div>
+                    <div class="fn-txt">
+                        <a href="/about-us" class="fn-link">О нас</a>
+                    </div>
+                </div>
+                <div class="fn-list">
+                    <div class="h2">ПОДДЕРЖКА</div>
+                    <div class="fn-txt">
+                        <a href="/support/" target="_blank" class="fn-link">Служба поддержки Vsmart</a>
+                        <a href="/buy/" class="fn-link">Где купить</a>
+                        <a href="/service/" class="fn-link">Сервисные центры</a>
+                        <a href="/instructions/" class="fn-link">Инструкции</a>
+                        <a href="/warranty/" class="fn-link">Гарантийная политика</a>
+                        <a href="/warranty-query/" class="fn-link">Запрос гарантийного статуса</a>
+                        <a href="/warranty-query/" class="fn-link">Политика конфиденциальности</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <!--
-    <div class="fn-group sm">
-        <div class="fn-list fw">
-            <div class="h2">Smart Home</div>
-            <div class="fn-txt">
-                <a href="#" class="fn-link">Smart Home solutions</a>
+            <div class="fn-group">
+                <div class="fn-list">
+                    <div class="fn-icons">
+                        <a href="https://vk.com/vsmart.russia" class="icon-link" target="_blank"><img src="/images/vk-brands.png"></a>
+                        <a href="https://www.facebook.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="/images/fn-icon-fb.png"></a>
+                        <a href="https://www.instagram.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="/images/instagram-brands.png"></a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    -->
-    <div class="fn-group">
-        <div class="fn-list">
-            <div class="h2">Contact</div>
-            <div class="fn-txt">
-                <a href="/en/contact" class="fn-link" target="_blank">Contact Us</a>
-            </div>
-        </div>
-        <!--
-        <div class="fn-list">
-            <div class="h2">News</div>
-            <div class="fn-txt">
-                <a href="https://vingroup.net/tin-tuc-su-kien" target="_blank" class="fn-link">News & events Vingroup</a>
-            </div>
-        </div>
-      -->
-    </div>
-    <div class="fn-group">
-        <div class="fn-list">
-            <div class="h2">Vsmart</div>
-            <div class="fn-txt">
-                <a href="/en/about-us" class="fn-link">Our Story</a>
-            </div>
-        </div>
-        <div class="fn-list">
-            <div class="h2">Support</div>
-            <div class="fn-txt">
-                <a href="https://support.vsmart.net/vn-en/support/policy" target="_blank" class="fn-link">Warranty Policy</a>
-                <a href="https://support.vsmart.net/vn-en/privacy" class="fn-link">Privacy Policy</a>
-                <a href="https://support.vsmart.net/vn-en/mobile/reception?filter=0" class="fn-link">Service Center</a>
-            </div>
-            <div class="fn-icons">
-                <a href="https://www.youtube.com/channel/UCSIsTYv1h8KsvcU-nhhPSjA" class="icon-link" target="_blank"><img src="/images/fn-icon-ytb.png"></a>
-                <a href="https://www.facebook.com/VsmartVietnam" class="icon-link" target="_blank"><img src="/images/fn-icon-fb.png"></a>
-            </div>
-        </div>
-    </div>
-</section>
+        </section>
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
