--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
     
     <title>Vsmart</title>
     <meta name="title" content="">
 
 
-    <link rel="stylesheet" href="/css/global.css" type="text/css" />
-    <link rel="stylesheet" href="/css/footnote.css" type="text/css" />
+    <link rel="stylesheet" href="./css/global.css" type="text/css" />
+    <link rel="stylesheet" href="./css/footnote.css" type="text/css" />
 
     
-    <link rel="stylesheet" href="/css/home-en.css" type="text/css" />
+    <link rel="stylesheet" href="./css/home-en.css" type="text/css" />
 
 
     <!-- Google Tag Manager -->
@@ -52,8 +52,8 @@
                 <div class="header_container">
                     <h1 class="logo">
                         <a href="/" title="VinSmart" class="vs-logo-link">
-                                <img src="/images/logo-b.png" alt="VSmart" class="vs-logo dark active">
-                            <img src="/images/logo.png" alt="VSmart" class="vs-logo light">
+                                <img src="./images/logo-b.png" alt="VSmart" class="vs-logo dark active">
+                            <img src="./images/logo.png" alt="VSmart" class="vs-logo light">
                         </a>
                     </h1>
                     <nav class="menu_primary xd-nav sl-change light">
@@ -68,7 +68,7 @@
                                 <a class="product-toggle" href="javascript:void(0);">Smartphone</a>
                             </li>
                             <li>
-                                <a href="/about-us">About Us</a>
+                                <a href="./about-us">About Us</a>
                             </li>
                             <li>
                                 <a href="https://support.vsmart.net/vn-en/">Support</a>
@@ -106,7 +106,7 @@
                     <li>
                         <a href="/joy-3">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-joy3.png" alt="Joy 3">
+                                <img class="cmPic" src="./images/menu/img-joy3.png" alt="Joy 3">
                             </div>
                             <span>Joy 3</span>
                         </a>
@@ -114,7 +114,7 @@
                     <li>
                         <a href="/live">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-live.png" alt="Live">
+                                <img class="cmPic" src="./images/menu/img-live.png" alt="Live">
                             </div>
                             <span>Live</span>
                         </a>
@@ -122,7 +122,7 @@
                     <li>
                         <a href="/joy-2-plus">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-joy2-plus.png" alt="Joy 2+">
+                                <img class="cmPic" src="./images/menu/img-joy2-plus.png" alt="Joy 2+">
                             </div>
                             <span>Joy 2+</span>
                         </a>
@@ -130,7 +130,7 @@
                     <li>
                         <a href="/star">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="/images/menu/img-star.png" alt="Star">
+                                <img class="cmPic" src="./images/menu/img-star.png" alt="Star">
                             </div>
                             <span>Star</span>
                         </a>
@@ -140,7 +140,7 @@
                             <div class="fs-menu-pic">
 
                                 <img class="cmPic"
-                                     src="/images/menu/img-bee.png" alt="Bee">
+                                     src="./images/menu/img-bee.png" alt="Bee">
                             </div>
                             <span>Bee</span>
                         </a>
