--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="u-header__section">
                 <div class="header_container">
                     <h1 class="logo">
-                        <a href="/" title="VinSmart" class="vs-logo-link">
+                        <a href="./" title="VinSmart" class="vs-logo-link">
                                 <img src="./images/logo-b.png" alt="VSmart" class="vs-logo dark active">
                             <img src="./images/logo.png" alt="VSmart" class="vs-logo light">
                         </a>
@@ -65,13 +65,13 @@
                         -->
                         <ul class="menu">
                             <li>
-                                <a class="product-toggle" href="javascript:void(0);">Smartphone</a>
+                                <a class="product-toggle" href="javascript:void(0);">Смартфоны</a>
                             </li>
                             <li>
-                                <a href="./about-us">About Us</a>
+                                <a href="./about-us">О нас</a>
                             </li>
                             <li>
-                                <a href="https://support.vsmart.net/vn-en/">Support</a>
+                                <a href="./support/">Поддержка</a>
                             </li>
                             <li>
                                 <select id="setLanguage" class="selectLangDark changeLang" data-open-icon="fa fa-angle-down" data-close-icon="fa fa-angle-up">
@@ -104,7 +104,7 @@
             <li>
                 <ul class="fs-spr-4">
                     <li>
-                        <a href="/joy-3">
+                        <a href="./joy-3">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="./images/menu/img-joy3.png" alt="Joy 3">
                             </div>
@@ -112,7 +112,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/live">
+                        <a href="./live">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="./images/menu/img-live.png" alt="Live">
                             </div>
@@ -120,7 +120,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/joy-2-plus">
+                        <a href="./joy-2-plus">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="./images/menu/img-joy2-plus.png" alt="Joy 2+">
                             </div>
@@ -128,7 +128,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/star">
+                        <a href="./star">
                             <div class="fs-menu-pic">
                                 <img class="cmPic" src="./images/menu/img-star.png" alt="Star">
                             </div>
@@ -136,7 +136,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/bee">
+                        <a href="./bee">
                             <div class="fs-menu-pic">
 
                                 <img class="cmPic"
@@ -167,9 +167,9 @@
                 <div class="logo-text">ACTIVE 3</div>
                 <div class="kv-btn"><a class="xd-btn">EXPLORE MORE</a></div>
             </div>
-            <a href="/active-3" class="float-click"></a>
-            <img src="/images/home-slide-1.jpg" class="xd-pc slide-pic">
-            <img src="/images/home-slide-1-mb.jpg" class="xd-mb slide-pic">
+            <a href="./active-3" class="float-click"></a>
+            <img src="./images/home-slide-1.jpg" class="xd-pc slide-pic">
+            <img src="./images/home-slide-1-mb.jpg" class="xd-mb slide-pic">
         </div>
     </div>
 </section>
@@ -184,8 +184,8 @@
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
-                <a href="/active-3" class="float-click"></a>
-                <img src="/images/tab-phone-active3.jpg" class="xd-pc"><img src="/images/tab-phone-active3-mb.jpg" class="xd-mb">
+                <a href="./active-3" class="float-click"></a>
+                <img src="./images/tab-phone-active3.jpg" class="xd-pc"><img src="./images/tab-phone-active3-mb.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
@@ -193,8 +193,8 @@
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
-                <a href="/bee-3" class="float-click"></a>
-                <img src="/images/tab-phone-bee3.jpg" class="xd-pc"><img src="/images/tab-phone-bee3-mb.jpg" class="xd-mb">
+                <a href="./bee-3" class="float-click"></a>
+                <img src="./images/tab-phone-bee3.jpg" class="xd-pc"><img src="./images/tab-phone-bee3-mb.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
@@ -202,8 +202,8 @@
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
-                <a href="/star-3" class="float-click"></a>
-                <img src="/images/tab-phone-star3.jpg" class="xd-pc"><img src="/images/tab-phone-star3-mb.jpg" class="xd-mb">
+                <a href="./star-3" class="float-click"></a>
+                <img src="./images/tab-phone-star3.jpg" class="xd-pc"><img src="./images/tab-phone-star3-mb.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
@@ -211,8 +211,8 @@
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
-                <a href="/joy-3" class="float-click"></a>
-                <img src="/images/tab-phone-joy3.jpg" class="xd-pc"><img src="/images/tab-phone-joy3-mb.jpg" class="xd-mb">
+                <a href="./joy-3" class="float-click"></a>
+                <img src="./images/tab-phone-joy3.jpg" class="xd-pc"><img src="./images/tab-phone-joy3-mb.jpg" class="xd-mb">
             </div>
             <div class="tab-list phone-list">
                 <div class="phone-name">
@@ -220,8 +220,8 @@
                     <span>Contact Us</span><br />
                     <a class="xd-btn">EXPLORE MORE</a>
                 </div>
-                <a href="/joy-2-plus" class="float-click"></a>
-                <img src="/images/tab-phone-joy2plus.jpg" class="xd-pc"><img src="/images/tab-phone-joy2plus-mb.jpg" class="xd-mb">
+                <a href="./joy-2-plus" class="float-click"></a>
+                <img src="./images/tab-phone-joy2plus.jpg" class="xd-pc"><img src="./images/tab-phone-joy2plus-mb.jpg" class="xd-mb">
             </div>
         </div>
     </div>
@@ -257,12 +257,12 @@
         </div>
     </div>
     <div class="why-pic">
-        <img src="/images/bnf-phone.jpg" class="bnf-pic vs-phone xd-pc active">
-        <img src="/images/bnf-tv.jpg" class="bnf-pic vs-tv xd-pc">
-        <img src="/images/bnf-iot.jpg" class="bnf-pic vs-iot xd-pc">
-        <img src="/images/bnf-phone-mb.jpg" class="bnf-pic vs-phone xd-mb active">
-        <img src="/images/bnf-tv-mb.jpg" class="bnf-pic vs-tv xd-mb">
-        <img src="/images/bnf-iot-mb.jpg" class="bnf-pic vs-iot xd-mb">
+        <img src="./images/bnf-phone.jpg" class="bnf-pic vs-phone xd-pc active">
+        <img src="./images/bnf-tv.jpg" class="bnf-pic vs-tv xd-pc">
+        <img src="./images/bnf-iot.jpg" class="bnf-pic vs-iot xd-pc">
+        <img src="./images/bnf-phone-mb.jpg" class="bnf-pic vs-phone xd-mb active">
+        <img src="./images/bnf-tv-mb.jpg" class="bnf-pic vs-tv xd-mb">
+        <img src="./images/bnf-iot-mb.jpg" class="bnf-pic vs-iot xd-mb">
     </div>
 </section>
 
@@ -275,17 +275,17 @@
         <div class="fn-list">
             <div class="h2">СМАРТФОНЫ</div>
             <div class="fn-txt">
-                <a href="/joy-3/" class="fn-link">Joy 3</a>
-                <a href="/live/" class="fn-link">Live</a>
-                <a href="/joy-2-plus/" class="fn-link">Joy 2+</a>
-                <a href="/star/" class="fn-link">Star</a>
-                <a href="/bee/" class="fn-link">Bee</a>
+                <a href="./joy-3/" class="fn-link">Joy 3</a>
+                <a href="./live/" class="fn-link">Live</a>
+                <a href="./joy-2-plus/" class="fn-link">Joy 2+</a>
+                <a href="./star/" class="fn-link">Star</a>
+                <a href="./bee/" class="fn-link">Bee</a>
             </div>
         </div>
         <div class="fn-list">
             <div class="h2">КОНТАКТЫ</div>
             <div class="fn-txt">
-                <a href="/contact" class="fn-link" target="_blank">Связаться с нами</a>
+                <a href="./contact" class="fn-link" target="_blank">Связаться с нами</a>
             </div>
         </div>
     </div>
@@ -293,28 +293,28 @@
         <div class="fn-list">
             <div class="h2">Vsmart</div>
             <div class="fn-txt">
-                <a href="/about-us" class="fn-link">О нас</a>
+                <a href="./about-us" class="fn-link">О нас</a>
             </div>
         </div>
         <div class="fn-list">
             <div class="h2">ПОДДЕРЖКА</div>
             <div class="fn-txt">
-                <a href="/support/" target="_blank" class="fn-link">Служба поддержки Vsmart</a>
-                <a href="/buy/" class="fn-link">Где купить</a>
-                <a href="/service/" class="fn-link">Сервисные центры</a>
-                <a href="/instructions/" class="fn-link">Инструкции</a>
-                <a href="/warranty/" class="fn-link">Гарантийная политика</a>
-                <a href="/warranty-query/" class="fn-link">Запрос гарантийного статуса</a>
-                <a href="/warranty-query/" class="fn-link">Политика конфиденциальности</a>
+                <a href="./support/" target="_blank" class="fn-link">Служба поддержки Vsmart</a>
+                <a href="./buy/" class="fn-link">Где купить</a>
+                <a href="./service/" class="fn-link">Сервисные центры</a>
+                <a href="./instructions/" class="fn-link">Инструкции</a>
+                <a href="./warranty/" class="fn-link">Гарантийная политика</a>
+                <a href="./warranty-query/" class="fn-link">Запрос гарантийного статуса</a>
+                <a href="./warranty-query/" class="fn-link">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
     <div class="fn-group">
         <div class="fn-list">
             <div class="fn-icons">
-                <a href="https://vk.com/vsmart.russia" class="icon-link" target="_blank"><img src="/images/vk-brands.png"></a>
-                <a href="https://www.facebook.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="/images/fn-icon-fb.png"></a>
-                <a href="https://www.instagram.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="/images/instagram-brands.png"></a>
+                <a href="https://vk.com/vsmart.russia" class="icon-link" target="_blank"><img src="./images/vk-brands.png"></a>
+                <a href="https://www.facebook.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="./images/fn-icon-fb.png"></a>
+                <a href="https://www.instagram.com/Vsmart.Russia/" class="icon-link" target="_blank"><img src="./images/instagram-brands.png"></a>
             </div>
         </div>
     </div>
@@ -322,7 +322,7 @@
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-        <script src="/js/site.js"></script>
+        <script src="./js/site.js"></script>
 
         
     <script type="text/javascript">
