--- a/bee/index.html
+++ b/bee/index.html
@@ -127,7 +127,7 @@
         <button class="menu_products_close" type="button"></button>
         <ul class="fs-has-layout">
             <li>
-                <h2>Smartphone</h2>
+                <h2>Смартфоны</h2>
             </li>
             <li>
                 <ul class="fs-spr-4">
@@ -789,9 +789,6 @@
     <!--normal style-->
     <script src="../js/vendor/swiper.js"></script>
     <script src="../js/main.js"></script>
-
-
-        <script lang="javascript">var __vnp = { code: 1771, key: '', secret: '26c4467f9bb37e3ec9d7bc6e85022b6e' }; (function () { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.defer = true; ga.src = '//core.vchat.vn/code/tracking.js'; var s = document.getElementsByTagName('script'); s[0].parentNode.insertBefore(ga, s[0]); })();</script>
 
 
     </div>
