--- a/bee/index.html
+++ b/bee/index.html
@@ -207,7 +207,7 @@
                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                          data-src="../images/bee/img-bee.png" alt="EVERYONE loves">
                 </div>
-                <p>СДЕЛАЙ СВОЮ ЖИЗНЬ «УМНЕЕ»</p>
+                <p>ВСЕ ГЕНИАЛЬНОЕ ПРОСТО</p>
             </div>
             <div class="fs-area-pic">
                 <img class="fs-pc pcPic fs-lazy"
@@ -224,7 +224,7 @@
         <div class="fs-box fs-has-layout">
             <div class="fs-area-txt">
                 <h2>ВЕСЬ МИР В&nbsp;ЛАДОНИ</h2>
-                <p>Ощутите все плюсы компактного 5.45” экрана с&nbsp;разрешением HD+, высокой контрастностью и&nbsp;яркими цветами. Сверхчувствительный дисплей с&nbsp;соотношением сторон 18:9 позволяет легко управлять смартфоном одной рукой.</p>
+                <p>Ощутите все преимущества компактного экрана 5.45” с&nbsp;разрешением HD+, высокой контрастностью и&nbsp;яркими цветами. Сверхчувствительный дисплей с&nbsp;соотношением сторон 18:9 позволяет легко управлять смартфоном одной рукой.</p>
 
                 <div class="fs-word-icons">
                     <ul>
@@ -321,8 +321,8 @@
         <div class="fs-box">
 
             <div class="fs-area-txt">
-                <h2>НА СВЯЗИ ВСЕГДА И&nbsp;ВЕЗДЕ</h2>
-                <p>Просматривайте и&nbsp;делитесь фотографиями и&nbsp;видео со&nbsp;всем миром. Будьте всегда в&nbsp;курсе последних новостей благодаря высокоскоростному соединению. Невозможно остановиться, когда с&nbsp;тобой Bee.</p>
+                <h2>ВСЕГДА НА СВЯЗИ</h2>
+                <p>Просматривайте видеоконтент и&nbsp;делитесь фотографиями со&nbsp;всем миром. Будьте всегда в&nbsp;курсе последних новостей благодаря 4G. Невозможно остановиться, когда с&nbsp;тобой Bee.</p>
             </div>
 
             <div class="fs-area-pic">
@@ -371,7 +371,7 @@
                                  data-src="../images/bee/icon-sim.png" alt="Поддержка использования 2 SIM-карт">
                         </div>
                         <div class="fs-small-txt">
-                            <p>Поддержка <br>использования <br>2 SIM-карт</p>
+                            <p>2 SIM-карты</p>
                         </div>
                     </li>
                 </ul>
@@ -398,8 +398,8 @@
 
         <div class="fs-box">
             <div class="fs-area-txt">
-                <h2>ПОЙМАЙ МОМЕНТ С&nbsp;HDR-КАМЕРОЙ</h2>
-                <p>Каждый момент становится живее и&nbsp;ярче благодаря 8-мегапиксельной камере смартфона Bee и&nbsp;интеллектуальному режиму HDR, который позволяет делать отличные снимки даже в&nbsp;услових плохого освещения</p>
+                <h2>ЛОВИ МОМЕНТ С&nbsp;HDR-КАМЕРОЙ BEE</h2>
+                <p>Каждый момент становится живее и&nbsp;ярче благодаря 8-мегапиксельной камере смартфона Bee и&nbsp;интеллектуальному режиму HDR, который позволяет делать отличные снимки даже в&nbsp;услових плохого освещения.</p>
 
                 <div class="fs-camera-icons">
                     <ul style="display:flex;align-items:center;">
@@ -573,7 +573,7 @@
                             </span>БАТАРЕЯ
                         </h3>
                         <p>2500 мАч</p>
-                        <p>Сьемный литий-ионный аккумулятор</p>
+                        <p>Съемный литий-ионный аккумулятор</p>
                     </div>
                     <div class="fs-parameter-item">
                         <h3>
@@ -583,7 +583,7 @@
                                      data-src="../images/icon/box-content-icon.png" alt="КОМПЛЕКТАЦИЯ">
                             </span>КОМПЛЕКТАЦИЯ
                         </h3>
-                        <p>Смартфон Vsmart Bee</p>
+                        <p>Смартфон VSmart Bee</p>
                         <p>Зарядное устройство</p>
                         <p>Кабель microUSB 2.0</p>
                         <p>Краткое руководство пользователя</p>
